--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,21 +1,29 @@
 <body class="text-center">
     <main class="form-signin">
         <form>
-            <img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72"
+                height="57">
             <h1 class="h3 mb-3 fw-normal">Login</h1>
             <div *ngIf="error" class="alert alert-danger" role="alert">
                 {{error}}
-              </div>
+            </div>
 
             <div class="form-floating">
-                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="usuario.email" placeholder="usuario@email.com">
+                <input type="email" class="form-control" id="email" name="email" [(ngModel)]="usuario.email"
+                    placeholder="usuario@email.com">
                 <label for="floatingInput">Email</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="senha" name="senha" [(ngModel)]="usuario.senha" placeholder="Senha">
+                <input type="password" class="form-control" id="senha" name="senha" [(ngModel)]="usuario.senha"
+                    placeholder="Senha">
                 <label for="floatingPassword">Senha</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" (click)="entrar()" [disabled]="usuario.email == '' || usuario.senha == ''">Entrar</button>
+            <button class="w-100 btn btn-lg btn-primary" type="button" (click)="entrar()" [disabled]="usuario.email == '' || usuario.senha == ''">
+                <span *ngIf="showLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                <span>Entrar</span>
+            </button>
+            <!-- <button class="w-100 btn btn-lg btn-primary" (click)="entrar()"
+                [disabled]="usuario.email == '' || usuario.senha == ''">Entrar</button> -->
             <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
         </form>
     </main>
