Prototipo tela de usuario

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
             </button>
             <!-- <button class="w-100 btn btn-lg btn-primary" (click)="entrar()"
                 [disabled]="usuario.email == '' || usuario.senha == ''">Entrar</button> -->
-            <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
+            <p class="mt-5 mb-3 text-muted">&copy; SIGE - 2021</p>
         </form>
     </main>
 </body>
