--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,7 +15,7 @@
                         Cadastros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/usuario']">Usuários/Cliente</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li>
                             <hr class="dropdown-divider">
