--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,18 +1,17 @@
 <app-menu></app-menu>
 <div class="container">
     <div class="card">
-        <div class="card-header">
-            <strong>Usuários</strong>
-        </div>
         <div class="card-body">
+            <h4>Usuários</h4>
             <div class="row">
                 <div class="col-md-7">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal"
-                        data-bs-target="#modalUsuario">Novo Usuário</button>
+                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalUsuario"
+                        (click)="cadastrar()">Novo Usuário</button>
                 </div>
                 <div class="col-md-5">
                     <div class="input-group">
-                        <select class="form-select" name="perfil" id="perfil">
+                        <select class="form-select" [(ngModel)]="tipo" (change)="getByPage(1)" name="perfil"
+                            id="perfil">
                             <option value="T">Todos</option>
                             <option value="A">Administrador</option>
                             <option value="C">Cliente</option>
@@ -25,8 +24,12 @@
 
                 </div>
             </div>
+            
+            <div style="margin-top: 10px;" *ngIf="usuarios.length == 0" class="alert alert-warning" role="alert">
+                Nenhum registro encontrado.
+              </div>
 
-            <div class="d-flex">
+            <div class="d-flex" *ngIf="usuarios.length > 0">
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -37,49 +40,40 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Administrador</td>
+                        <tr *ngFor="let u of usuarios">
+                            <td> {{u.id}} </td>
+                            <td> {{u.nome}} </td>
+                            <td *ngIf="u.nivel == 'A'"> Administrador </td>
+                            <td *ngIf="u.nivel == 'C'"> Cliente </td>
+                            <td *ngIf="u.nivel == 'O'"> Operador </td>
                             <td style="text-align: center;">
-                                <i style="margin-right: 10px;" class="fas fa-pen"></i>
-                                <i class="fas fa-trash-alt"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Administrador</td>
-                            <td style="text-align: center;">
-                                <i style="margin-right: 10px;" class="fas fa-pen"></i>
-                                <i class="fas fa-trash-alt"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Administrador</td>
-                            <td style="text-align: center;">
-                                <i style="margin-right: 10px;" class="fas fa-pen"></i>
+                                <i style="margin-right: 10px;" (click)="editar(u)" data-bs-toggle="modal"
+                                    data-bs-target="#modalUsuario" class="fas fa-pen"></i>
                                 <i class="fas fa-trash-alt"></i>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <nav aria-label="Page navigation example">
+            <nav *ngIf="usuarios.length > 0" aria-label="Page navigation example">
                 <ul class="pagination justify-content-end">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
+                    <li class="page-item" [ngClass]="{disabled: pagina == 1}" (click)="getByPage(pagina-1)">
+                        <a class="page-link" aria-label="Previous">
                             <span aria-hidden="true">&laquo;</span>
                         </a>
                     </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
+
+                    <li class="page-item"><a class="page-link" *ngIf="pagina > 1" (click)="getByPage(pagina-1)"> {{
+                            pagina - 1 }} </a></li>
+
+                    <li class="page-item active"><a class="page-link" (click)="getByPage(pagina)"> {{ pagina }}
+                        </a></li>
+
+                    <li class="page-item"><a class="page-link" *ngIf="proximo" (click)="getByPage(pagina+1)">
+                            {{ pagina + 1 }} </a></li>
+                    <li class="page-item" [ngClass]="{disabled: !proximo}" (click)="getByPage(pagina+1)">
+                        <a class="page-link" [ngClass]="{disabled: !proximo}">
+                            <span [ngClass]="{disabled: !proximo}">&raquo;</span>
                         </a>
                     </li>
                 </ul>
@@ -94,11 +88,13 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Cadastrar usuário</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title" id="exampleModalLabel">{{operacao}} usuário</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" #closeModal (click)=cancelar() aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
+                <div *ngIf="this.error" class="alert alert-danger" role="alert">
+                    {{this.error}}
+                </div>
                 <!-- dados pessoais -->
                 <p>
                     <a data-bs-toggle="collapse" href="#collapseDadosPessoais" class="collapse-tittle" role="button"
@@ -111,26 +107,27 @@
                     <div class="card card-body">
                         <div class="form-group col-md-2">
                             <label for="id">Código</label>
-                            <input type="text" class="form-control" id="id">
+                            <input type="text" [(ngModel)]="this.usuarioCE.id" disabled class="form-control" id="id">
                         </div>
                         <div class="row">
                             <div class="form-group col-md-4">
                                 <label for="cpf">CPF</label>
-                                <input type="text" class="form-control" id="cpf">
+                                <input type="text" [(ngModel)]="this.usuarioCE.cpf" class="form-control" id="cpf">
                             </div>
                             <div class="form-group col-md-8">
                                 <label for="nome">Nome</label>
-                                <input type="text" class="form-control" id="nome">
+                                <input type="text" [(ngModel)]="this.usuarioCE.nome" class="form-control" id="nome">
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-md-4">
                                 <label for="nome">Data de Nascimento</label>
-                                <input type="date" name="" id="data-nascimento" class="form-control">
+                                <input type="date" name="" [(ngModel)]="this.usuarioCE.nascimento" id="data-nascimento"
+                                    class="form-control">
                             </div>
                             <div class="form-group col-md-3">
                                 <label for="sexo">Sexo</label>
-                                <select name="sexo" id="sexo" class="form-select">
+                                <select name="sexo" [(ngModel)]="this.usuarioCE.sexo" id="sexo" class="form-select">
                                     <option value="#">Selecione</option>
                                     <option value="M">Masculino</option>
                                     <option value="F">Feminino</option>
@@ -140,7 +137,7 @@
                     </div> <br>
                 </div>
                 <!-- dados pessoais -->
-                
+
                 <!-- endereco -->
                 <p>
                     <a data-bs-toggle="collapse" href="#collapseEndereco" class="collapse-tittle" role="button"
@@ -154,26 +151,30 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <label for="CEP">CEP</label>
-                                <input type="text" class="form-control" id="CEP">
+                                <input type="text" [(ngModel)]="this.usuarioCE.endereco.cep" class="form-control"
+                                    id="CEP">
                             </div>
                             <div class="form-group col-md-7">
                                 <label for="rua">Rua</label>
-                                <input type="text" class="form-control" id="rua">
+                                <input type="text" [(ngModel)]="this.usuarioCE.endereco.rua" class="form-control"
+                                    id="rua">
                             </div>
                             <div class="form-group col-md-2">
                                 <label for="numero">Número</label>
-                                <input type="number" name="" id="numero" class="form-control">
+                                <input type="number" name="" [(ngModel)]="this.usuarioCE.endereco.numero" id="numero"
+                                    class="form-control">
                             </div>
                             <div class="form-group col-md-12">
                                 <label for="complemento">Complemento</label>
-                                <input type="text" class="form-control" id="complemento">
+                                <input type="text" [(ngModel)]="this.usuarioCE.endereco.complemento"
+                                    class="form-control" id="complemento">
                             </div>
                         </div>
                         <div class="row">
 
                             <div class="col-md-3">
                                 <label for="UF">UF</label>
-                                <select class="form-select" name="UF" id="UF">
+                                <select class="form-select" [(ngModel)]="this.usuarioCE.endereco.uf" name="UF" id="UF">
                                     <option value="#">Selecione</option>
                                     <option value="PR">Paraná</option>
                                     <option value="SC">Santa Catarina</option>
@@ -182,7 +183,8 @@
                             </div>
                             <div class="col-md-6">
                                 <label for="cidade">Cidade</label>
-                                <input type="text" class="form-control" id="cidade">
+                                <input type="text" [(ngModel)]="this.usuarioCE.endereco.cidade" class="form-control"
+                                    id="cidade">
                             </div>
                         </div>
                     </div><br>
@@ -193,8 +195,7 @@
                 <p>
                     <a data-bs-toggle="collapse" href="#collapseAcesso" class="collapse-tittle" role="button"
                         aria-expanded="false" aria-controls="collapseExample">
-                        <i class="fas fa-at"></i> Dados de acesso <small
-                            style="font-size: 10px;">(Adicionar)</small>
+                        <i class="fas fa-at"></i> Dados de acesso <small style="font-size: 10px;">(Adicionar)</small>
                     </a>
                 </p>
                 <div class="collapse" id="collapseAcesso">
@@ -202,7 +203,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 <label for="nivel">Nível</label>
-                                <select name="nivel" id="nivel" class="form-select">
+                                <select name="nivel" [(ngModel)]="this.usuarioCE.nivel" id="nivel" class="form-select">
                                     <option value="#">Selecione</option>
                                     <option value="A">Administrador</option>
                                     <option value="C">Cliente</option>
@@ -213,11 +214,13 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <label for="email">E-mail</label>
-                                <input type="email" name="" id="email" class="form-control">
+                                <input type="email" [(ngModel)]="this.usuarioCE.email" name="email" id="email"
+                                    class="form-control">
                             </div>
                             <div class="col-md-6">
                                 <label for="senha">Senha</label>
-                                <input type="text" class="form-control" id="senha">
+                                <input type="password" [(ngModel)]="usuarioCE.senha" name="senha" class="form-control"
+                                    id="senha">
                             </div>
                         </div>
                     </div>
@@ -226,8 +229,12 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-danger " data-bs-dismiss="modal">Cancelar</button>
-                <button type="button" class="btn btn-success">Salvar</button>
+                <button type="button" class="btn btn-outline-danger" (click)="cancelar()" data-bs-dismiss="modal">Cancelar</button>
+                <button [disabled]="showloading" class="btn btn-success" type="button" (click)="salvar()">
+                    <span *ngIf="showloading" class="spinner-border spinner-border-sm" role="status"
+                        aria-hidden="true"></span>
+                    <span *ngIf="!showloading">Salvar</span>
+                </button>
             </div>
         </div>
     </div>
