--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -1,4 +1,5 @@
 <app-menu></app-menu>
+<app-toast-message #toast></app-toast-message>
 <div class="container">
     <div class="card">
         <div class="card-body">
@@ -49,7 +50,7 @@
                             <td style="text-align: center;">
                                 <i style="margin-right: 10px;" (click)="editar(u)" data-bs-toggle="modal"
                                     data-bs-target="#modalUsuario" class="fas fa-pen"></i>
-                                <i class="fas fa-trash-alt"></i>
+                                <i class="fas fa-trash-alt" (click)="excluir(u)"></i>
                             </td>
                         </tr>
                     </tbody>
@@ -240,3 +241,4 @@
     </div>
 </div>
 <!-- Modal   -->
+
