Local e ajustes de interface

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,7 +16,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" [routerLink]="['/usuario']">Usuários/Cliente</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/local']">Local</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
