--- a/src/app/shared/toast-message/toast-message.component.html
+++ b/src/app/shared/toast-message/toast-message.component.html
@@ -1,11 +1,3 @@
 <!-- <button type="button" class="btn btn-primary" id="liveToastBtn" (click)="showToast()">Show live toast</button> -->
-<div style="position: absolute; bottom: 20px; left: 10px; z-index: 111; color: white;" class="toast bg-dark align-items-center" id="myToast"
-    role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex">
-        <div class="toast-body">
-            <i *ngIf="showSuccess" class="fas fa-check-circle" style="color: green;"></i>
-            <i *ngIf="showWarning" class="fas fa-exclamation-triangle" style="color: red;"></i>
-            {{ mensagem }}
-        </div>
-    </div>
+<div class="toast-container position-absolute bottom-0 start-0" style="z-index: 100000; margin-bottom: 25px; margin-left: 5px;" id="container">
 </div>
