--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -18,9 +18,6 @@
                             <option value="C">Cliente</option>
                             <option value="O">Operador</option>
                         </select>
-                        <input type="text" class="form-control" placeholder="Nome">
-                        <button class="btn btn-outline-secondary" type="button" id="button-addon2"><i
-                                class="fas fa-search"></i></button>
                     </div>
 
                 </div>
@@ -93,9 +90,6 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" #closeModal (click)=cancelar() aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div *ngIf="this.error" class="alert alert-danger" role="alert">
-                    {{this.error}}
-                </div>
                 <!-- dados pessoais -->
                 <p>
                     <a data-bs-toggle="collapse" href="#collapseDadosPessoais" class="collapse-tittle" role="button"
@@ -133,6 +127,10 @@
                                     <option value="M">Masculino</option>
                                     <option value="F">Feminino</option>
                                 </select>
+                            </div>
+                            <div class="form-group col-md-5">
+                                <label for="telefone">Telefone</label>
+                                <input type="text" name="telefone" [(ngModel)]="this.usuarioCE.telefone" id="telefone" class="form-control">
                             </div>
                         </div>
                     </div> <br>
