--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -22,10 +22,16 @@
 
                 </div>
             </div>
-            
-            <div style="margin-top: 10px;" *ngIf="usuarios.length == 0" class="alert alert-warning" role="alert">
+
+            <div style="margin-top: 10px;" *ngIf="usuarios.length == 0 && !showLoadingAll" class="alert alert-warning" role="alert">
                 Nenhum registro encontrado.
-              </div>
+            </div>
+
+            <div class="text-center" *ngIf="showLoadingAll">
+                <div class="spinner-border" role="status">
+                    <span class="visually-hidden">Carregando...</span>
+                </div>
+            </div>
 
             <div class="d-flex" *ngIf="usuarios.length > 0">
                 <table class="table table-hover">
@@ -87,7 +93,8 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">{{operacao}} usuário</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" #closeModal (click)=cancelar() aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" #closeModal (click)=cancelar()
+                    aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <!-- dados pessoais -->
@@ -130,7 +137,8 @@
                             </div>
                             <div class="form-group col-md-5">
                                 <label for="telefone">Telefone</label>
-                                <input type="text" name="telefone" [(ngModel)]="this.usuarioCE.telefone" id="telefone" class="form-control">
+                                <input type="text" name="telefone" [(ngModel)]="this.usuarioCE.telefone" id="telefone"
+                                    class="form-control">
                             </div>
                         </div>
                     </div> <br>
@@ -228,7 +236,8 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-outline-danger" (click)="cancelar()" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-outline-danger" (click)="cancelar()"
+                    data-bs-dismiss="modal">Cancelar</button>
                 <button [disabled]="showloading" class="btn btn-success" type="button" (click)="salvar()">
                     <span *ngIf="showloading" class="spinner-border spinner-border-sm" role="status"
                         aria-hidden="true"></span>
@@ -239,4 +248,3 @@
     </div>
 </div>
 <!-- Modal   -->
-
