--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,2 +1,32 @@
 <app-menu></app-menu>
-<p>dashboard works!</p>
+<div id="root">
+    <div class="container pt-5">
+        <div class="row align-items-stretch">
+            <div class="c-dashboardInfo col-lg-3 col-md-6">
+                <div class="wrap">
+                    <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Eventos ativos
+                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">0</span>
+                </div>
+            </div>
+            <div class="c-dashboardInfo col-lg-3 col-md-6">
+                <div class="wrap">
+                    <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Entradas vendidas/mês
+                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">0</span>
+                </div>
+            </div>
+            <div class="c-dashboardInfo col-lg-3 col-md-6">
+                <div class="wrap">
+                    <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Recebimento</h4>
+                    <span class="hind-font caption-12 c-dashboardInfo__count">R$0</span><span
+                        class="hind-font caption-12 c-dashboardInfo__subInfo">Último mês: R$0</span>
+                </div>
+            </div>
+            <div class="c-dashboardInfo col-lg-3 col-md-6">
+                <div class="wrap">
+                    <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Pagamentos aguardando aprovação</h4>
+                    <span class="hind-font caption-12 c-dashboardInfo__count">R$0</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
