--- a/src/app/local/local.component.html
+++ b/src/app/local/local.component.html
@@ -6,8 +6,17 @@
             <h4>Local</h4>
             <div class="row">
                 <div class="col-md-7">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalLocal"
-                        (click)="cadastrar()">Novo Local</button>
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalLocal"
+                            (click)="cadastrar()">Novo Local</button>
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-success dropdown-toggle" href="#" id="btnGroupDrop1" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false"></a>
+                          <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                            <a class="dropdown-item" href="{{URL_RELATORIO}}" target="_blank">Emitir relatório</a>
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </div>
 
