--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,10 +17,10 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" [routerLink]="['/usuario']">Usuários/Cliente</a></li>
                         <li><a class="dropdown-item" [routerLink]="['/local']">Local</a></li>
-                        <li>
+                        <!-- <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li> -->
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -28,14 +28,14 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Eventos
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Action</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    </ul> -->
                 </li>
             </ul>
             <div>
