--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,8 +15,10 @@
                         Cadastros
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" [routerLink]="['/eventos']">Eventos</a></li>
                         <li><a class="dropdown-item" [routerLink]="['/usuario']">Usuários/Cliente</a></li>
                         <li><a class="dropdown-item" [routerLink]="['/local']">Local</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/parceiro']">Parceiro</a></li>
                         <!-- <li>
                             <hr class="dropdown-divider">
                         </li>
