--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -5,10 +5,17 @@
         <div class="card-body">
             <h4>Usuários</h4>
             <div class="row">
-                <div class="col-md-7">
+                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
                     <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalUsuario"
                         (click)="cadastrar()">Novo Usuário</button>
-                </div>
+                    <div class="btn-group" role="group">
+                        <a class="btn btn-success dropdown-toggle" href="#" id="btnGroupDrop1" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false"></a>
+                      <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                        <a class="dropdown-item" href="{{URL_RELATORIO}}" target="_blank">Emitir relatório</a>
+                      </div>
+                    </div>
+                  </div>
                 <div class="col-md-5">
                     <div class="input-group">
                         <select class="form-select" [(ngModel)]="tipo" (change)="getByPage(1)" name="perfil"
