--- a/src/app/usuario/usuario.component.html
+++ b/src/app/usuario/usuario.component.html
@@ -5,17 +5,19 @@
         <div class="card-body">
             <h4>Usuários</h4>
             <div class="row">
-                <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-                    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#modalUsuario"
-                        (click)="cadastrar()">Novo Usuário</button>
-                    <div class="btn-group" role="group">
-                        <a class="btn btn-success dropdown-toggle" href="#" id="btnGroupDrop1" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false"></a>
-                      <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-                        <a class="dropdown-item" href="{{URL_RELATORIO}}" target="_blank">Emitir relatório</a>
-                      </div>
+                <div class="col-md-7">
+                    <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
+                        <button type="button" class="btn btn-success" data-bs-toggle="modal"
+                            data-bs-target="#modalUsuario" (click)="cadastrar()">Novo Usuário</button>
+                        <div class="btn-group" role="group">
+                            <a class="btn btn-success dropdown-toggle" href="#" id="btnGroupDrop1" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false"></a>
+                            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
+                                <a class="dropdown-item" href="{{URL_RELATORIO}}" target="_blank">Emitir relatório</a>
+                            </div>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="col-md-5">
                     <div class="input-group">
                         <select class="form-select" [(ngModel)]="tipo" (change)="getByPage(1)" name="perfil"
@@ -30,7 +32,8 @@
                 </div>
             </div>
 
-            <div style="margin-top: 10px;" *ngIf="usuarios.length == 0 && !showLoadingAll" class="alert alert-warning" role="alert">
+            <div style="margin-top: 10px;" *ngIf="usuarios.length == 0 && !showLoadingAll" class="alert alert-warning"
+                role="alert">
                 Nenhum registro encontrado.
             </div>
 
