--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -53,7 +53,7 @@
                             </svg>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item disabled" href="#">Meu Perfil</a></li>
+                            <li><a class="dropdown-item" [routerLink]="['/parametros']" routerLinkActive="rota-atual" >Parametros</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
