Autorização de pagamento

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -30,14 +30,9 @@
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Eventos
                     </a>
-                    <!-- <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul> -->
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" [routerLink]="['/autorizar-pagamento']" routerLinkActive="router-link-active" >Autorizar pagamento</a></li>
+                    </ul>
                 </li>
             </ul>
             <div>
