--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -32,6 +32,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" [routerLink]="['/autorizar-pagamento']" routerLinkActive="router-link-active" >Autorizar pagamento</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/acompanhar-eventos']" routerLinkActive="router-link-active" >Acompanhar eventos</a></li>
                     </ul>
                 </li>
             </ul>
