Emissão de certificado

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -33,6 +33,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" [routerLink]="['/autorizar-pagamento']" routerLinkActive="router-link-active" >Autorizar pagamento</a></li>
                         <li><a class="dropdown-item" [routerLink]="['/acompanhar-eventos']" routerLinkActive="router-link-active" >Acompanhar eventos</a></li>
+                        <li><a class="dropdown-item" [routerLink]="['/emitir-certificado']" routerLinkActive="router-link-active" >Emitir certificado</a></li>
                     </ul>
                 </li>
             </ul>
