--- a/src/app/emitir-certificado/emitir-certificado.component.html
+++ b/src/app/emitir-certificado/emitir-certificado.component.html
@@ -7,50 +7,39 @@
             <div class="row">
                 <div class="form-group col-md-5">
                     <label for="evento">Eventos</label>
-                    <select name="evento" id="evento" class="form-control">
-                        <option value="">Spring Boot</option>
+                    <select name="evento" id="evento" class="form-control" (change)="loadIngresso($event)">
+                        <option value="#">Selecione</option>
+                        <option *ngFor="let evento of eventos" [value]="evento.id">{{ evento.nome }}</option>
                     </select>
                 </div>
             </div> <br>
-            <div class="d-flex">
+            <div class="d-flex" style="max-height: 400px; overflow-y: auto;" *ngIf="ingressos && ingressos.length > 0">
                 <table class="table table-hover">
                     <thead>
                         <tr>
                             <th scope="col">Nª ingresso</th>
                             <th scope="col">Nome titular</th>
                             <th scope="col">CPF titular</th>
-                            <th scope="col">Evento</th>
+                            <th scope="col">Status</th>
                             <th scope="col" style="text-align: center;">Emitir certificado?</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>2</td>
-                            <td>Ana</td>
-                            <td>987.654.321.14</td>
-                            <td>Spring Boot</td>
-                            <td style="text-align: center;"><input type="checkbox" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Marco</td>
-                            <td>852.369.741-56</td>
-                            <td>Spring Boot</td>
-                            <td style="text-align: center;"><input type="checkbox" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>Luiz</td>
-                            <td>357.159.852-53</td>
-                            <td>Spring Boot</td>
-                            <td style="text-align: center;"><input type="checkbox" name="" id=""></td>
+                        <tr *ngFor="let ingresso of ingressos">
+                            <td> {{ingresso.id}} </td>
+                            <td> {{ingresso.nome}} </td>
+                            <td> {{ingresso.cpf}} </td>
+                            <td> {{ingresso.statusIngresso}} </td>
+                            <td style="text-align: center;">
+                                <input class="emitir-certificado" (change)="hasSelecionado()" type="checkbox" name="emitir-{{ingresso.id}}" id="emitir-{{ingresso.id}}">
+                            </td>
                         </tr>
                     </tbody>
                     <tbody>
                     </tbody>
                 </table>
-            </div>
-            <button class="btn btn-success" style="display: flex; float: right;">Emitir certificados</button>
+            </div> <br>
+            <button class="btn btn-success" style="display: flex; float: right;" [disabled]="!selecionados" (click)="emitirCertificado()">Emitir certificados</button>
         </div>
     </div>
 </div>
