--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,26 +5,25 @@
             <div class="c-dashboardInfo col-lg-3 col-md-6">
                 <div class="wrap">
                     <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Eventos ativos
-                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">0</span>
+                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">{{dashboard.ativos}}</span>
                 </div>
             </div>
             <div class="c-dashboardInfo col-lg-3 col-md-6">
                 <div class="wrap">
                     <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Entradas vendidas/mês
-                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">0</span>
+                    </h4><span class="hind-font caption-12 c-dashboardInfo__count">{{dashboard.ingressos_vendidos}}</span>
                 </div>
             </div>
             <div class="c-dashboardInfo col-lg-3 col-md-6">
                 <div class="wrap">
                     <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Recebimento</h4>
-                    <span class="hind-font caption-12 c-dashboardInfo__count">R$0</span><span
-                        class="hind-font caption-12 c-dashboardInfo__subInfo">Último mês: R$0</span>
+                    <span class="hind-font caption-12 c-dashboardInfo__count">R$ {{dashboard.recebimento || 0}}</span>
                 </div>
             </div>
             <div class="c-dashboardInfo col-lg-3 col-md-6">
                 <div class="wrap">
                     <h4 class="heading heading5 hind-font medium-font-weight c-dashboardInfo__title">Pagamentos aguardando aprovação</h4>
-                    <span class="hind-font caption-12 c-dashboardInfo__count">R$0</span>
+                    <span class="hind-font caption-12 c-dashboardInfo__count">R$ {{dashboard.aguardando_aprovacao || 0}}</span>
                 </div>
             </div>
         </div>
