--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <body style="background-color: #ebedf0;" class="text-center">
     <main class="form-signin">
         <form>
-            <img class="mb-4" src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72"
+            <img class="mb-4" src="../../assets/sige.png" alt="" width="72"
                 height="57">
             <h1 class="h3 mb-3 fw-normal">Login</h1>
             <div *ngIf="error" class="alert alert-danger" role="alert">
